syntax = "proto3";

package wso2.discovery.api;

import "wso2/discovery/api/Endpoint.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/api;api";
option java_package = "org.wso2.choreo.connect.discovery.api";
option java_outer_classname = "EndpointClusterProto";
option java_multiple_files = true;

// [#protodoc-title: Endpoint]

// Holds endpoint URLs and the config
message EndpointCluster {
    repeated Endpoint urls = 1;
	EndpointClusterConfig config = 2;
}

message EndpointClusterConfig {
    RetryConfig retryConfig = 1;
}

message RetryConfig {
    uint32 count = 1;
    repeated uint32 statusCodes = 2;
}
